fixed about page text align to center (oops)

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -41,7 +41,7 @@ p {
 
 /* p for this specific page */
 .aboutwrittencontent{
-    text-align: right;
+    text-align: center;
     font-family: 'Barlow Semi Condensed', sans-serif;
     width: 100%;
     margin: auto;
